--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -1,4 +1,11 @@
+# 객체명과 필드명을 조합한 세밀한 메시지 코드가 높은 우선순위를 갖는다.
+## Level 1
 required.item.itemName=상품 이름은 필수입니다.
 range.item.price=가격은 {0} ~ {1} 까지 허용합니다.
 max.item.quantity=수량은 최대 {0} 까지 허용합니다.
 total.price.min=가격 * 수량의 합은 {0}원 이상이어야 합니다. 현재 값 = {1}
+
+## Level 2
+required=필수 값입니다.
+range=범위는 {0} ~ {1} 까지 허용합니다.
+max=최대 {0} 까지 허용합니다.
